--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,63 @@
-h1 {
+.page{
     font-family: 'Raleway', sans-serif;
+    max-width: 1400px;
+}
+.logo_booki img{
+    height: 19px;
+    padding-top: 44px;
+    overflow:hidden;
+}
+.head{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 115px;
+    padding-left: 55px;
+    padding-bottom: 63px;
+}
+.liste{
+    display: flex;
+    text-align: center;
+    font-size:large;
+    margin-right:77px;
+}
+.bouton_nav{
+    size: 162px;
+    font-size: 19px;
+    padding-top: 48px;
+    margin-left: 67px;
+    color: #0065FC solid;
+}
+.bouton_nav:hover {
+    border-top: 2px #0065FC solid;
+}
+h1 {
     font-weight: bold
 }
 p {
-    font-family: 'Raleway', sans-serif;
-    color: blue;
+    color: black;
 }
+.container_outils_recherche{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.container_barre_recherche{
+    display: flex;
+    justify-content: flex-start;
+}
+.container_filtres{
+    display: flex;
+    justify-content: flex-start;
+}
+.bouton_geoloc{
+    background-color: grey;
+    width: 50px;
+    height: 49px;
+}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 10px 10px; /* 25px rounded corners */
+  }
