--- a/css/style.css
+++ b/css/style.css
@@ -15,20 +15,27 @@
     justify-content: space-between;
     height: 126px;
 }
-.liste{
+.liste_nav{
     display: flex;
     text-align: center;
     font-size:large;
-    margin-right:77px;
+    margin-right: 77px;
 }
-.bouton_nav a{
+.liste_nav a:visited{
+    color: black;
+    text-decoration-line: underline;
+    text-decoration-color: white ;
+}
+.liste_nav a{
     font-size: 19px;
     padding-top: 48px;
     margin-left: 67px;
     color: #0065FC solid;
 }
-.bouton_nav a:hover{
+.liste_nav a:hover{
     border-top: 2px #0065FC solid;
+    color: #0065FC;
+    text-decoration: none;
 }
 p {
     color: black;
@@ -113,34 +120,83 @@ p {
     font-weight: 700;
 }
 .container_filtres h2{
+    width: 54px;
+    height: 21px;
     font-size: 18px;
     line-height: 21.13px;
     text-align: center;
+    padding-right: 42px;
 }
 .boutons_filtre button {
     display: inline-flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     background-color: white;
     border-color: #D9D9D9;
     border-radius: 25px;
     height: 50px;
+    margin-left: 10px;
 }
 .boutons_filtre button p{
     font-size: 17px;
     font-weight: bold;
     line-height: 19.96px;
-    text-align: center;
+    margin-bottom: 20px;
+    margin-right: 10px;
 }
 .boutons_filtre button i{
     color: #0065FC;
-    padding-right: 10px;
+    margin-right: 10px;
+    margin-left: 20px;
+    margin-bottom: -5px;
 }
-.fa-money-bill-wave{
-    width: 22px;
-    height: 16.26px;
+.fa-person {
+    margin-right: 4.86px;
+}
+.container_filtres button:hover {
+    background-color: #DEEBFF;
+}
+.container_info_sup {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 14px;
+    padding-top: 25px;
+}
+.container_info_sup i{
+    color: #0065FC;
+    margin-right: 21px;
+}
+.section_articles_hebergements{
+    display: flex;
+}
+.section_hebergements_ville{
+    width: 880px;
+    height: 626px;
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    padding-left: -5px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.section_hebergements_ville h2{
+    padding-left: 40px;
+}
+.articles_hebergements_ville {
+    width: 800px;
+    height: 428px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-between;
+    align-self: center;
 }
 .card {
+    width: 246px;
+    height: 199px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 10px 10px; /* 25px rounded corners */
