--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ p {
 .card_pop p {
     margin-top: -10px;
 }
-.container_article_pop_text {
+.container_article_pop_description {
     width: 66%;
 }
 .fa-solid {
@@ -321,13 +321,16 @@ p {
 }
 .card_activ img {
     width: 100%;
-    height: 90%;
+    height: 389px;
     object-fit: cover;
     border-radius: 15px 15px 0px 0px;
     margin-bottom: 0px;
 }
 .container_text_activ {
     margin-left: 19px;
+    height: 56px;
+    display: flex;
+    align-items: flex-start;
 }
 .container_footer {
     display: flex;
@@ -353,4 +356,69 @@ p {
     font-size: 17px;
     font-weight: 400;
     line-height: 18px;
+}
+@media screen and (max-width: 992px) {
+    .section_articles_hebergements{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 70px;
+        padding-top: 39px;
+        width: 880px;
+    }
+    .section_hebergements_ville{
+        margin-bottom: 53px;
+    }
+    .container_articles_populaires{
+        width: 883px;
+        height: 278px;
+    }
+    .articles_populaires {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .card_pop {
+        width: 252px;
+        height: 144px;
+        font-size:smaller;
+        margin-right: 23px;
+    }
+    .card_pop img{
+        width: 102px;
+    }
+    .container_article_pop_description {
+        line-height: 15px;
+        padding-left: 5px;
+        margin-top: -5px;
+        height: 144px;        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .card_activ {
+        width: 182px;
+        height: 267px;
+        font-size: small;
+    }
+    .card_activ img{
+        height: 211px;
+    }
+    .container_text_activ h3{
+        height: 40px;
+        justify-self: center;
+    }
+    .container_footer{
+        width: 879px;
+        height: 225px;
+        display: flex;
+        align-content: space-around;
+    }
+    .bloc_footer {
+        margin-left: -50px;
+        margin-top: 35px;
+        font-size: smaller;
+    }
+    .bloc_footer button{
+        font-size: small;
+    }
 }
