--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
     font-size: 19px;
     padding-top: 48px;
     margin-left: 67px;
-    color: #0065FC solid;
+    color: #0065FC;
 }
 .liste_nav a:hover{
     border-top: 2px #0065FC solid;
@@ -178,7 +178,6 @@ p {
     height: 626px;
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding-left: -5px;
     margin-right: 40px;
     display: flex;
     flex-direction: column;
@@ -262,7 +261,6 @@ p {
     justify-content: flex-start;
     align-items: flex-start;
     text-align: start;
-    text-size-adjust: 15px;
     margin-left: 16px;
     line-height: 5px;
 
