--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .page{
     /* Réglages généraux pour toute la page */
     font-family: 'Raleway', sans-serif;
+    width: 100%;
     max-width: 1400px;
     padding-left: 55px;
     background-color: white;
@@ -185,11 +186,14 @@ p {
     Toute les cartes accueillent un lien sur l'ensemble du conteneur "Card" (vide pour cette première version) vers la page du logement/activité en question.
     Pour ce faire nous avons besoin d'une position relative pour la carte et absolue pour le lien. */
     display: flex;
+    width: 100%;
+    height: auto;
 }
 .section_hebergements_ville{
     /* Les cartes contenus sont disposées sur 2 lignes pour un affichage harmonieux. */
-    width: 880px;
-    height: 626px;
+    width: 62%;
+    max-width: 700px;
+    height:auto;
     background-color: #F2F2F2;
     border-radius: 20px;
     margin-right: 40px;
@@ -199,40 +203,44 @@ p {
 }
 .section_hebergements_ville h2{
     padding-left: 40px;
-    margin-top: 42px;
-    margin-bottom: 13px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size: larger;
 }
 .bouton_afficher {
     margin-left: 44px;
 } 
 .articles_hebergements_ville {
-    width: 800px;
-    max-width: 800px;
-    height: 428px;
+    width:90%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: space-between;
     align-self: center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .container_articles_populaires {
-    width: 420px;
-    height: 625px;
+    width: 30%;
+    height: auto;
     background-color: #F2F2F2;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
 .container_h2_logo{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 37px;
-    margin-right: 42px;
+    margin-left:7%;
+    margin-right: 7%;
+    font-size: small;
 }
 .articles_populaires {
-    width: 343px;
-    height: 498px;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -243,8 +251,9 @@ p {
     Toutes les cartes sont relativements similaires, mais les réglages varient un peu selon le conteneur pour mieux s'intégrer dans la mise en page.
     Pour celles-ci, On affiche le tout en colonne, en commençant par l'image du logement qui prendra toute la largeur disponible moins la marge, 
     suivi du titre du logement, du descriptif puis enfin de la notation réprésentées par des étoiles bleus et grise*/
-    width: 246px;
-    height: 199px;
+    flex:1 1 30%;
+    max-width: 180px;
+    height: 95%;
     max-height: 199px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -252,8 +261,9 @@ p {
     background-color: white;
     display: flex;
     flex-direction: column;
-    font-size: 16px;
+    font-size: small;
     position: relative;
+    margin-right: 5%;
 }
 .card > a,.card_pop > a,.card_activ > a {
     position: absolute;
@@ -264,7 +274,8 @@ p {
 }
 .card img {
     width: 95%;
-    max-height: 120px;
+    height: 60%;
+    max-height: 110px;
     border-radius: 15px 15px 0px 0px;
     object-fit: cover;
     margin-top: 5px;
@@ -279,7 +290,7 @@ p {
     justify-content: flex-start;
     align-items: flex-start;
     text-align: start;
-    margin-left: 16px;
+    margin-left: 5%;
     line-height: 5px;
 
 }
@@ -290,33 +301,44 @@ p {
     /* Voici nos seconds type de carte, pour les logements du conteneur "les plus populaires". 
     Ici les différences avec les premières sont: image disposé sur le tiers gauche de la carte, 
     descriptif (titre + texte + notation) disposé sur les 2/3 de droite en colonne. */
-    width: 343px;
-    height: 144px;
+    width: 85%;
+    margin-left: 7%;
+    margin-bottom: 7%;
+    height: 120px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 15px;
     background-color: white;
     display: flex;
     flex-direction: row;
-    line-height: 20px;
+    line-height: 15px;
     position: relative;
+    font-size: smaller;
 }
 .card_pop img {
     width: 95%;
-    max-width: 129px;
+    max-width: 90px;
     max-height: 136px;
     object-fit: cover;
     border-radius: 15px 0px 0px 15px;
     justify-self: center;
-    margin-top: 4px;
-    margin-left: 5px;
-    margin-right: 15px;
+    margin: 1%;
 }
 .card_pop p {
-    margin-top: -10px;
+    margin-top: 1%;
 }
 .container_article_pop_description {
     width: 66%;
+    height: 130px;
+    margin-top: 0px;
+    overflow: hidden;
+}
+.container_articles_pop_text {
+    height: 100%;
+}
+.container_article_pop_description h3 {
+    margin-top: 5%;
+    margin-bottom: 0px;
 }
 .fa-solid {
     color: #0065FC;
@@ -329,12 +351,13 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 }
 .card_activ {
     /* les cartes d'activités en question. Celles-ci sont un peu plus différente des précédentes. 
     L'image compose l'essentiel de la carte, et le descriptif ne contient qu'un simple titre */
-    width: 302px;
-    height: 444px;
+    width: 220px;
+    height: 320px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 15px;
@@ -343,11 +366,11 @@ p {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-right: 20px;
+    margin-right:30px;
 }
 .card_activ img {
     width: 100%;
-    height: 389px;
+    height: 85%;
     object-fit: cover;
     border-radius: 15px 15px 0px 0px;
     margin-bottom: 0px;
@@ -365,25 +388,31 @@ p {
     Les éléments contenus sont disposés quant à eux en colonne. Ces contenus sont composés d'un titre puis des liens (non fonctionnel pour cette version) */
     display: flex;
     justify-content: space-around;
-    width: 1339px;
-    height: 225px;
-    font-size:small;
+    width: 100%;
+    height:auto;
     background-color: #F2F2F2;
     margin-top: 60px;
 }
 .bloc_footer {
+    width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     margin-top: 25px;
-    margin-left: -190px;
+    padding-right: 15%;
+    padding-left: 3%;
+    padding-bottom: 2%;
+    font-size: small;
+}
+.bloc_footer h2 {
+    font-size: small;
 }
 .bloc_footer button {
     border: none;
     padding-bottom: 12px;
     margin-left: -5px;
-    font-size: 17px;
+    font-size: smaller;
     font-weight: 400;
     line-height: 18px;
 }
@@ -398,6 +427,22 @@ p {
     - Les conteneurs "Hébergements " et  "les plus populaires" sont disposés cette fois en colonne. 
     -Le conteneur "Les plus populaires dispose ses éléments en ligne.
     - La taille des cartes, des images et de la police d'écriture a été globalement réduite pour mieux correspondre à ce format. */
+    .liste_nav {
+        margin-right: 0px;
+    }
+    .container_filtres {
+        width: 100%;
+    }
+    .container_filtres h2 {
+        font-size: medium;
+        padding-right: 0px;
+    }
+    .boutons_filtre div p{
+        font-size: medium;
+    }
+    .boutons_filtre div i {
+        font-size: medium;
+    }
     .section_articles_hebergements{
         display: flex;
         flex-direction: column;
@@ -407,59 +452,69 @@ p {
     }
     .section_hebergements_ville{
         margin-bottom: 53px;
+        width: 100%;
+        max-width: 760px;
     }
     .container_articles_populaires{
-        width: 883px;
-        height: 278px;
+        width: 100%;
+        max-width: 760px;
+        height: auto;
     }
     .articles_populaires {
         display: flex;
         flex-direction: row;
         justify-content: center;
     }
+    .container_h2_logo {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
     .card_pop {
-        width: 252px;
-        height: 144px;
+        flex: 1 1 30%;
+        max-width: 220px;
+        height: 110px;
         font-size:smaller;
         margin-right: 23px;
     }
     .card_pop img{
-        width: 102px;
+        width:40%;
     }
     .container_article_pop_description {
         line-height: 15px;
         padding-left: 5px;
         margin-top: -5px;
-        height: 144px;        
+        height: 110px;        
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
     .card_activ {
-        width: 182px;
-        height: 267px;
+        width: 160px;
+        height: 240px;
         font-size: small;
     }
     .card_activ img{
-        height: 211px;
+        height: 200px;
     }
     .container_text_activ h3{
         height: 40px;
         justify-self: center;
     }
     .container_footer{
-        width: 879px;
-        height: 225px;
-        display: flex;
-        align-content: space-around;
+        width: 100%;
     }
     .bloc_footer {
-        margin-left: -50px;
-        margin-top: 35px;
-        font-size: smaller;
+        width: 200px;
+        padding-right: 0px;
+    }
+    .bloc_footer h2 {
+        font-size: medium;
+        padding-left: 5px;
+        padding-right: 0px;
     }
     .bloc_footer button{
         font-size: small;
+        margin-left: 0px;
     }
 }
 @media screen and ( max-width: 767px) {
@@ -482,7 +537,7 @@ p {
     -Les tailles de police, de conteneurs etc ont été globalement réajustés pour une meilleure lisibilité.*/
     .page {
         width: 100%;
-        font-size: x-large;
+        font-size: large;
         padding-left: 0px;
         padding-right: 0px;
     }
@@ -503,8 +558,8 @@ p {
         margin-left: 1%;
     }
     .logo_booki img {
-        width: 5em;
-        height: 1.5em;
+        width: 3.1em;
+        height: 1em;
         object-fit: fill;
     }
     .bloc_nav{
@@ -527,7 +582,7 @@ p {
     }
     .liste_nav a{
         margin-left: 0px;
-        font-size: x-large;
+        font-size: large;
     }
     .liens_nav a:hover{
         border-top: none;
@@ -559,6 +614,7 @@ p {
     .champ_recherche_ville {
         width: 60%;
         height: 97%;
+        justify-content: flex-start;
     }
     .champ_recherche_ville p input{
         margin: 0;
@@ -588,6 +644,8 @@ p {
     }
     .container_filtres h2{
         font-size: larger;
+        margin-left: 4%;
+        margin-bottom: 0px;
     }
     .boutons_filtre {
         width:100%;
@@ -598,6 +656,7 @@ p {
     }
     .boutons_filtre div i {
         margin-left: 8%;
+        font-size: x-large;
     }
     .boutons_filtre div p{
         font-size: small;
@@ -606,14 +665,17 @@ p {
         width:40%;
     }
     .bouton_filtre {
-        height: 4.3em;
+        height: 3.5em;
         border-radius: 30px;
         margin-left: 5%;
         margin-top: 5%;
         font-size: small;
     }
+    .container_info_sup p{
+        font-size: large;
+    }
     .container_info_sup i {
-        margin-right: -15px;
+        margin-right: 0px;
         height: 2em;
     }
     .section_articles_hebergements {
@@ -636,6 +698,7 @@ p {
         margin-top: 26px;
         padding-bottom: 20px;
         justify-self: center;
+        font-size: x-large;
     }
     .articles_hebergements_ville
     {
@@ -650,7 +713,23 @@ p {
 
     .card {
         width: 100%;
-        height: 200px;
+        max-width: 420px;
+        height: 250px;
+        margin-bottom: 15px;
+        line-height: 20px;
+    }
+    .card img {
+        max-height: 220px;
+        margin-top: 2%;
+    }
+    .container_card_article_text {
+        width: 100%;
+    }
+    .container_card_article_text h3 {
+        font-size: large;
+    }
+    .container_card_article_text p  {
+        font-size: medium;
     }
     .container_articles_populaires {
         width: 100%;
@@ -658,69 +737,80 @@ p {
         flex-direction: column;
         border-radius: 0px;
     }
-    .container_articles_populaires h2 {
-        font-size: larger;
+    .container_h2_logo {
+        font-size:large;
     }
     .articles_populaires {
         flex-direction: column;
         width: 90%;
         justify-content: space-around;
+        margin-bottom: 30px;
     }
     .articles_populaires article {
         height: 30%;
     }
     .card_pop {
         width: 100%;
-        height: 100%;
+        height: 200px;
         margin-right: 0px;
+        margin-left: 0px;
         font-size: large;
+        line-height: 20px;
     }
     .container_article_pop_description {
-        width: 55%;
-        float: left;
-        box-sizing: border-box;
-        margin-top: 1%;
-        margin-bottom: 1%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .container_article_pop_description h3{
+        margin-top: 0px;
+        margin-bottom: 5%;
     }
     .card_pop img {
-        width: 45%;
-        float: left;
-        box-sizing: border-box;
+        width: 50%;
+        max-width:160px;
+        max-height: 200px;
         margin: 2%;
     }
     .section_activités {
         flex-direction: column;
-        width: 90%;
-        height: 1100px;
-        margin-left: 15%;
+        width: 100%;
+        height: auto;
+        margin-left: 5%;
     }
     .section_activités h2 {
-        width: 37%;
         align-self: center;
     }
     .container_activites {
         flex-direction: column;
-        width: 80%;
-        height: 1000px;
+        width: 90%;
+        height: auto;
     }
     .card_activ {
         width: 100%;
         height: 190px;
+        margin-bottom: 30px;
+        font-size: large;
+        padding-bottom: 10px;
     }
     .card_activ img {
-        height: 134px;
+        height: 70%;
     }
     .container_footer {
         flex-direction: column;
         align-content: flex-start;
-        width: 90%;
-        height: 600px;
-        margin-left: 5%;
+        width: 100%;
+        height: auto;
     }
     .bloc_footer {
         margin-left: 10%;
         margin-top: 0px;
         font-size: medium;
+        width: 300px;
+    }
+    .bloc_footer h2 {
+        font-size: larger;
     }
     .bloc_footer button {
         font-size: medium;
