--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
     font-size: 19px;
     padding-top: 48px;
     margin-left: 67px;
-    color: #0065FC;
+    color: black;
 }
 .liste_nav a:hover{
     border-top: 2px #0065FC solid;
