--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-family: 'Raleway', sans-serif;
     width: 100%;
     max-width: 1400px;
-    padding-left: 55px;
+    padding-left:10px;
     background-color: white;
     overflow-x: hidden;
 }
@@ -352,6 +352,7 @@ p {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    max-width: 1350px;
 }
 .card_activ {
     /* les cartes d'activités en question. Celles-ci sont un peu plus différente des précédentes. 
@@ -389,6 +390,7 @@ p {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    max-width: 1350px;
     height:auto;
     background-color: #F2F2F2;
     margin-top: 60px;
@@ -686,10 +688,12 @@ p {
     }
     .section_hebergements_ville {
         width: 100%;
+        max-width: 760px;
         height: auto;
         flex-direction: column;
         justify-content: flex-start;
         margin-bottom: 0px;
+        margin-right: 0px;
         background-color: white;
         border-radius: 0px;
     }
@@ -702,8 +706,8 @@ p {
     }
     .articles_hebergements_ville
     {
-        width: 90%;
-        height: 90%;
+        width: 95%;
+        height: 100%;
         flex-wrap: nowrap;
         flex-direction: column;
     }
@@ -713,7 +717,7 @@ p {
 
     .card {
         width: 100%;
-        max-width: 420px;
+        max-width: 760px;
         height: 250px;
         margin-bottom: 15px;
         line-height: 20px;
